--- a/res/layout/dashboard_item.xml
+++ b/res/layout/dashboard_item.xml
@@ -17,7 +17,6 @@
  * limitations under the License.
  */
 -->
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:background="@drawable/dashboard_highlight"
@@ -27,11 +26,11 @@
     android:layout_marginRight="5dip"
     android:layout_marginTop="15dip"
     android:layout_width="108dip"
-    android:layout_height="wrap_content">    
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_gravity="center_horizontal"
-        android:layout_width="65dip"
+        android:layout_width="70dip"
         android:layout_height="65dip">
 
         <ImageView android:id="@+id/avatar"
@@ -40,8 +39,8 @@
             android:padding="2dip"
             android:layout_width="60dip"
             android:layout_height="60dip"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true" />
+            android:layout_centerInParent="true"
+            />
 
         <ImageView android:id="@+id/presence"
             android:scaleType="fitXY"
@@ -49,12 +48,20 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true" />
-
     </RelativeLayout>
 
     <TextView android:id="@+id/name"
-        android:textColor="?android:attr/textColorPrimary"
-        android:layout_gravity="center"
+        android:textColor="?android:attr/textColorPrimaryNoDisable"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <TextView android:id="@+id/shortcut"
+        android:textColor="?android:attr/textColorPrimaryNoDisable"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
