--- a/res/layout/add_contact_activity.xml
+++ b/res/layout/add_contact_activity.xml
@@ -30,7 +30,19 @@
 
     <MultiAutoCompleteTextView android:id="@+id/email"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" android:layout_marginTop="10dip" />
+        android:layout_height="wrap_content" />
+
+    <TextView android:id="@+id/choose_list_label"
+        android:layout_marginTop="10dip"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/choose_list_label" />
+
+    <Spinner android:id="@+id/choose_list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:drawSelectorOnTop="true"
+        android:prompt="@string/choose_list_label" />
 
     <TextView android:layout_marginTop="10dip"
         android:layout_width="fill_parent"
