--- a/res/menu/chat_screen_menu.xml
+++ b/res/menu/chat_screen_menu.xml
@@ -22,28 +22,28 @@
 
     <item android:id="@+id/menu_view_friend_list"
         android:title="@string/menu_view_contact_list"
-        android:icon="@drawable/ic_menu_friend_list"/>
+        android:icon="@*android:drawable/ic_menu_cc" />
 
     <item android:id="@+id/menu_switch_chats"
         android:title="@string/menu_switch_chats"
         android:alphabeticShortcut=" "
-        android:icon="@drawable/ic_menu_chat_dashboard" />
+        android:icon="@*android:drawable/ic_menu_chat_dashboard" />
 
     <item android:id="@+id/menu_insert_smiley"
         android:title="@string/menu_insert_smiley"
-        android:icon="@drawable/ic_menu_emoticons" />
+        android:icon="@*android:drawable/ic_menu_emoticons" />
 
     <item android:id="@+id/menu_end_conversation"
         android:title="@string/menu_end_conversation"
-        android:icon="@drawable/ic_menu_end_conversation" />
+        android:icon="@*android:drawable/ic_menu_end_conversation" />
 
     <item android:id="@+id/menu_block_contact"
         android:title="@string/menu_block_contact"
-        android:icon="@drawable/ic_menu_block" />
+        android:icon="@*android:drawable/ic_menu_block" />
 
     <item android:id="@+id/menu_invite_contact"
         android:title="@string/menu_invite_contact"
-        android:icon="@drawable/ic_menu_invite" />
+        android:icon="@*android:drawable/ic_menu_invite" />
 
     <item android:id="@+id/menu_view_profile"
         android:title="@string/menu_view_profile"
@@ -60,4 +60,65 @@
         android:alphabeticShortcut="k"
         android:visible="false"
         android:enabled="true" />
+
+    <item
+        android:id="@+id/menu_quick_switch_0"
+        android:alphabeticShortcut="0"
+        android:visible="false"
+        android:enabled="true" />
+
+    <item
+        android:id="@+id/menu_quick_switch_1"
+        android:alphabeticShortcut="1"
+        android:visible="false"
+        android:enabled="true" />
+
+    <item
+        android:id="@+id/menu_quick_switch_2"
+        android:alphabeticShortcut="2"
+        android:visible="false"
+        android:enabled="true" />
+
+    <item
+        android:id="@+id/menu_quick_switch_3"
+        android:alphabeticShortcut="3"
+        android:visible="false"
+        android:enabled="true" />
+
+    <item
+        android:id="@+id/menu_quick_switch_4"
+        android:alphabeticShortcut="4"
+        android:visible="false"
+        android:enabled="true" />
+
+    <item
+        android:id="@+id/menu_quick_switch_5"
+        android:alphabeticShortcut="5"
+        android:visible="false"
+        android:enabled="true" />
+
+    <item
+        android:id="@+id/menu_quick_switch_6"
+        android:alphabeticShortcut="6"
+        android:visible="false"
+        android:enabled="true" />
+
+    <item
+        android:id="@+id/menu_quick_switch_7"
+        android:alphabeticShortcut="7"
+        android:visible="false"
+        android:enabled="true" />
+
+    <item
+        android:id="@+id/menu_quick_switch_8"
+        android:alphabeticShortcut="8"
+        android:visible="false"
+        android:enabled="true" />
+
+    <item
+        android:id="@+id/menu_quick_switch_9"
+        android:alphabeticShortcut="9"
+        android:visible="false"
+        android:enabled="true" />
+
 </menu>
