--- a/res/layout/contact_list_view.xml
+++ b/res/layout/contact_list_view.xml
@@ -28,6 +28,10 @@
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="9dip"
+        android:paddingTop="5dip"
+        android:paddingRight="5dip"
+        android:paddingBottom="5dip"            
         android:layout_centerVertical="true"
         android:background="#ffff">
 
@@ -48,11 +52,12 @@
         </LinearLayout>
 
         <EditText android:id="@+id/statusEdit"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:autoText="false"
+            android:inputType="textCapSentences|textAutoCorrect"
             android:selectAllOnFocus="true"
-            android:singleLine="true"/>
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"/>
 
     </com.android.im.app.UserPresenceView>
 
