--- a/res/layout/contact_view.xml
+++ b/res/layout/contact_view.xml
@@ -25,7 +25,8 @@
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:paddingTop="2dip"
     android:paddingBottom="2dip"
-    android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft">
+    android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+    android:paddingRight="9dip">
 
     <LinearLayout android:id="@+id/contactInfo"
         android:orientation="vertical"
@@ -42,7 +43,6 @@
                 android:maxLines="1"
                 android:layout_width="0dip"
                 android:layout_weight="1"
-                android:textSize="16sp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -58,19 +58,21 @@
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
+            <!--
             <ImageView
                 android:id="@+id/presence"
                 android:layout_width="18dip"
                 android:layout_height="18dip" />
-
-           <com.android.im.app.Ticker
+            -->
+            
+            <com.android.im.app.Ticker
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip">
 
                <TextView android:id="@+id/line2"
                    android:maxLines="1"
-                   android:layout_width="fill_parent"
+                   android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            </com.android.im.app.Ticker>
