--- a/res/layout/chat_view.xml
+++ b/res/layout/chat_view.xml
@@ -159,6 +159,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine|textImeMultiLine"
+            android:imeOptions="actionSend|flagNoEnterAction"
             android:maxLines="4"
             android:maxLength="2000"
             android:hint="@string/compose_hint"/>
