Refactor IM client to build all stuff in a single APK
- IM app was separated as three separated parts before: IM.apk, com.android.im.plugin.jar and the plugin APK. With this structure, it's hard to maintain the dependency and impossible to update through Market.
- The plug-in structure is kept with some changes: instead of with aidl files in a shared library, they are changed as normal java interfaces and will be built in the apk now.
- The branding resources have to be put in IM/res now since there is only one APK after the refactoring.
- The landing page has been moved to IM APK from ImProvider since GTalk has been separated from IMPS client.

--- a/res/layout/contact_list_view.xml
+++ b/res/layout/contact_list_view.xml
@@ -76,6 +76,7 @@
 
     <ExpandableListView android:id="@+id/contactsList"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        android:nextFocusUp="@id/statusDropDownButton" />
 
 </com.android.im.app.ContactListView>
