--- a/res/layout/contact_view.xml
+++ b/res/layout/contact_view.xml
@@ -58,7 +58,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView android:id="@+id/line1"
-                    android:maxLines="1"
+                    android:singleLine="true"
                     android:layout_width="0dip"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -76,7 +76,7 @@
             </LinearLayout>
 
             <TextView android:id="@+id/line2"
-                android:maxLines="1"
+                android:singleLine="true"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
