--- a/res/layout/group_view.xml
+++ b/res/layout/group_view.xml
@@ -25,15 +25,16 @@
     android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft">
 
     <TextView android:id="@+id/text1"
-        android:maxLines="1"
+        android:singleLine="true"
         android:layout_width="0dip"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
+        android:ellipsize="marquee"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView android:id="@+id/text2"
-        android:maxLines="1"
+        android:singleLine="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
