--- a/res/layout/contact_list_filter_view.xml
+++ b/res/layout/contact_list_filter_view.xml
@@ -19,13 +19,13 @@
 -->
 <com.android.im.app.ContactListFilterView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:id="@+id/contactFilterView"
     android:orientation="vertical">
 
     <ListView android:id="@+id/filteredList"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </com.android.im.app.ContactListFilterView>
