--- a/res/layout/contact_list_view.xml
+++ b/res/layout/contact_list_view.xml
@@ -18,15 +18,15 @@
  */
 -->
 <com.android.im.app.ContactListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:id="@+id/contactListView"
     android:orientation="vertical">
 
     <com.android.im.app.UserPresenceView
         android:id="@+id/userPresence"
         android:orientation="horizontal"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="64dip"
         android:layout_centerVertical="true"
         android:paddingTop="9dip"
@@ -37,7 +37,7 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical">
 
            <ImageButton android:id="@+id/statusDropDownButton"
@@ -63,7 +63,7 @@
             android:visibility="gone"/>
 
         <TextView android:id="@+id/statusView"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:paddingTop="5dip"
@@ -75,8 +75,8 @@
     </com.android.im.app.UserPresenceView>
 
     <ExpandableListView android:id="@+id/contactsList"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:nextFocusUp="@id/statusDropDownButton" />
 
 </com.android.im.app.ContactListView>
