--- a/res/layout/account_activity.xml
+++ b/res/layout/account_activity.xml
@@ -18,8 +18,8 @@
  */
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dip">
 
@@ -30,7 +30,7 @@
     <EditText android:id="@+id/edtName"
         android:completionThreshold="1"
         android:selectAllOnFocus="true"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text" />
 
@@ -40,12 +40,12 @@
         android:text="@string/label_password" />
 
     <EditText android:id="@+id/edtPass"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:selectAllOnFocus="true"
         android:inputType="textPassword"/>
 
-    <LinearLayout android:layout_width="fill_parent"
+    <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <LinearLayout android:layout_width="wrap_content"
@@ -65,8 +65,8 @@
                 android:text="@string/keep_me_signed_in" />
         </LinearLayout>
 
-        <LinearLayout android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+        <LinearLayout android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1.0"
             android:gravity="center_vertical|right"
             android:orientation="horizontal">
