--- a/res/layout/account_view.xml
+++ b/res/layout/account_view.xml
@@ -20,7 +20,7 @@
 <com.android.im.app.ProviderListItem
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight">
 
     <ImageView
@@ -37,7 +37,7 @@
         android:orientation="horizontal"
         android:layout_weight="1"
         android:layout_width="0dip"
-        android:layout_height="fill_parent">    
+        android:layout_height="match_parent">    
 
         <LinearLayout
             android:orientation="vertical"
@@ -48,7 +48,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView android:id="@+id/providerName"
@@ -58,7 +58,7 @@
                     android:singleLine="true"
                     android:layout_weight="1.0"
                     android:ellipsize="marquee"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
                 <TextView android:id="@+id/conversations"
                     android:textAppearance="?android:attr/textAppearanceMedium"
@@ -75,7 +75,7 @@
                 android:textColor="@color/landing_page_text"
                 android:ellipsize="marquee"
                 android:singleLine="true"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
         </LinearLayout>
         <ImageView
