--- a/res/layout/blocked_contact_view.xml
+++ b/res/layout/blocked_contact_view.xml
@@ -21,7 +21,7 @@
 <view xmlns:android="http://schemas.android.com/apk/res/android"
     class="com.android.im.app.BlockedContactView"
     android:orientation="horizontal"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:paddingLeft="9dip"
@@ -33,8 +33,8 @@
         android:layout_height="60dip">
 
         <ImageView android:id="@+id/avatar"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:padding="2dip"
             android:scaleType="fitCenter" />
 
@@ -50,19 +50,19 @@
         android:orientation="vertical"
         android:paddingLeft="9dip"
         android:layout_gravity="center_vertical"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView android:id="@+id/line1"
             android:maxLines="1"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <TextView android:id="@+id/line2"
             android:maxLines="1"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
