--- a/res/layout/chat_switcher_dialog.xml
+++ b/res/layout/chat_switcher_dialog.xml
@@ -19,19 +19,19 @@
 -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="112dip" >
 
     <HorizontalScrollView
         android:scrollbars="none"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:orientation="horizontal"
             android:id="@+id/pseudogallery"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" >
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
         </LinearLayout>
     </HorizontalScrollView>
 
