--- a/res/layout/chat_switcher_item.xml
+++ b/res/layout/chat_switcher_item.xml
@@ -21,7 +21,7 @@
     android:background="@drawable/dashboard_highlight"
     android:layout_gravity="center_horizontal"
     android:layout_width="92dip"
-    android:layout_height="fill_parent">
+    android:layout_height="match_parent">
 
     <!-- avatar -->
     <ImageView android:id="@+id/avatar"
