--- a/res/layout/contact_presence_activity.xml
+++ b/res/layout/contact_presence_activity.xml
@@ -18,7 +18,7 @@
  */
 -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
     <LinearLayout
@@ -26,7 +26,7 @@
         android:paddingTop="15dip"
         android:paddingRight="15dip"
         android:paddingBottom="15dip"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
@@ -37,7 +37,7 @@
             android:background="@drawable/picture_frame_background" />
 
         <TextView android:id="@+id/labelName"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dip"
             android:textStyle="bold"
@@ -45,11 +45,11 @@
             android:text="@string/label_username" />
 
         <TextView android:id="@+id/txtName"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <TextView android:id="@+id/labelStatus"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dip"
             android:textStyle="bold"
@@ -57,11 +57,11 @@
             android:text="@string/label_status" />
 
         <TextView android:id="@+id/txtStatus"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView android:id="@+id/txtStatusText"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dip"
             android:layout_marginTop="4dip"
@@ -70,7 +70,7 @@
             android:textStyle="italic" />
 
         <TextView android:id="@+id/labelClientType"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dip"                
             android:textStyle="bold"
@@ -78,7 +78,7 @@
             android:text="@string/label_client_type" />
 
         <TextView android:id="@+id/txtClientType"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
