--- a/res/layout/contact_view.xml
+++ b/res/layout/contact_view.xml
@@ -21,7 +21,7 @@
 <view xmlns:android="http://schemas.android.com/apk/res/android"
     class="com.android.im.app.ContactView"
     android:orientation="horizontal"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:paddingTop="2dip"
     android:paddingBottom="2dip"
@@ -31,7 +31,7 @@
     <RelativeLayout
         android:id="@+id/contactInfo"
         android:layout_width="0dip"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_marginRight="5dip"
         android:paddingLeft="6dip">
@@ -48,13 +48,13 @@
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@id/presence"
             android:layout_centerVertical="true">
 
             <LinearLayout android:orientation="horizontal"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView android:id="@+id/line1"
@@ -77,7 +77,7 @@
 
             <TextView android:id="@+id/line2"
                 android:singleLine="true"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:ellipsize="marquee"/>
