--- a/res/layout/imglist_item.xml
+++ b/res/layout/imglist_item.xml
@@ -20,12 +20,12 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:gravity="center_vertical" >
 
     <ImageView android:id="@+id/separator"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="3dip"
         android:paddingBottom="3dip"
