--- a/res/layout/new_message_item.xml
+++ b/res/layout/new_message_item.xml
@@ -20,12 +20,12 @@
 <view xmlns:android="http://schemas.android.com/apk/res/android"
     class="com.android.im.app.MessageView"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
     <TextView android:id="@+id/message"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 </view>
